Fix for full-page plugins on Mac not passing the right origin during resize because we weren't calculating the widget offset. Bug 120168 r=bneese sr=beard